brat/test/golden/imports/use-unqualified.brat.golden
Error in test/golden/imports/use-unqualified.brat@4:8-9
main = x
       ^

  x not found in (value) environment

